src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/C4A61.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram C4A61 {
	abstract class A;
}
