src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/C4A61.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram C4A61 {

	final public class A;
	public final class B;
	private class C;
	protected class D;
	static class E;
	final class F;
	/ class G;
}
